--- a/demos/glorias-cleaning/index.html
+++ b/demos/glorias-cleaning/index.html
@@ -3,298 +3,369 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Gloria's Cleaning Service - Professional house cleaning in Austin. 10+ years experience. Apartments, homes, move-in/out. Call (737) 703-7203.">
+  <meta name="description" content="Gloria's Cleaning Service - Professional house cleaning in Austin. 10+ years experience. Call Gloria at (737) 703-7203.">
   <title>Gloria's Cleaning Service | Austin House Cleaning</title>
   
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700&family=Source+Serif+4:wght@600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@500;600;700&family=Inter:wght@400;500&display=swap" rel="stylesheet">
   
   <style>
     :root {
-      --primary: #0891b2;
-      --primary-dark: #0e7490;
-      --accent: #f59e0b;
+      --teal: #0891b2;
+      --teal-dark: #0e7490;
+      --sunshine: #fbbf24;
       --text: #1e293b;
-      --text-muted: #64748b;
-      --bg: #f8fafc;
-      --card: #fff;
-      --border: #e2e8f0;
+      --text-light: #64748b;
+      --bg: #ffffff;
     }
 
     * { margin: 0; padding: 0; box-sizing: border-box; }
     html { scroll-behavior: smooth; }
-
+    
     body {
-      font-family: 'Outfit', system-ui, sans-serif;
-      line-height: 1.6;
+      font-family: 'Inter', system-ui, sans-serif;
       color: var(--text);
+      line-height: 1.7;
       background: var(--bg);
     }
 
     img { max-width: 100%; display: block; }
     a { color: inherit; text-decoration: none; }
 
-    h1, h2 { font-family: 'Source Serif 4', Georgia, serif; font-weight: 600; }
-    h1 { font-size: clamp(1.75rem, 4vw, 2.5rem); line-height: 1.2; }
-    h2 { font-size: clamp(1.4rem, 3vw, 1.875rem); margin-bottom: 20px; }
-    h3 { font-size: 1.05rem; font-weight: 600; margin-bottom: 6px; }
-
-    .container { max-width: 960px; margin: 0 auto; padding: 0 20px; }
+    h1, h2, h3 { 
+      font-family: 'Quicksand', sans-serif; 
+      font-weight: 700;
+    }
 
     /* Nav */
     .nav {
-      position: sticky;
-      top: 0;
+      padding: 16px 0;
       background: #fff;
-      border-bottom: 1px solid var(--border);
-      z-index: 100;
+      border-bottom: 1px solid #f1f5f9;
     }
     .nav-inner {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 24px;
       display: flex;
       justify-content: space-between;
       align-items: center;
-      height: 56px;
     }
-    .logo { font-weight: 700; font-size: 1.1rem; color: var(--primary); }
+    .logo {
+      font-family: 'Quicksand', sans-serif;
+      font-size: 1.3rem;
+      font-weight: 700;
+      color: var(--teal);
+    }
     .nav-cta {
-      background: var(--primary);
+      background: var(--teal);
       color: #fff;
-      padding: 8px 18px;
-      border-radius: 5px;
+      padding: 10px 20px;
+      border-radius: 50px;
       font-weight: 500;
       font-size: 0.9rem;
     }
-    .nav-cta:hover { background: var(--primary-dark); }
+    .nav-cta:hover { background: var(--teal-dark); }
 
-    /* Hero */
+    /* Hero - bright & airy */
     .hero {
-      padding: 48px 0 40px;
-      background: #fff;
-      border-bottom: 1px solid var(--border);
+      padding: 80px 0 60px;
+      background: linear-gradient(135deg, #f0fdfa 0%, #ecfeff 50%, #fff 100%);
+      position: relative;
+      overflow: hidden;
+    }
+    .hero::before {
+      content: '';
+      position: absolute;
+      top: -50%;
+      right: -10%;
+      width: 400px;
+      height: 400px;
+      background: radial-gradient(circle, rgba(8,145,178,0.08) 0%, transparent 70%);
+      border-radius: 50%;
+    }
+    .hero::after {
+      content: '';
+      position: absolute;
+      bottom: -30%;
+      left: 10%;
+      width: 300px;
+      height: 300px;
+      background: radial-gradient(circle, rgba(251,191,36,0.1) 0%, transparent 70%);
+      border-radius: 50%;
     }
     .hero-inner {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 24px;
+      position: relative;
+      z-index: 1;
       display: grid;
-      grid-template-columns: 1.1fr 1fr;
-      gap: 36px;
+      grid-template-columns: 1fr 1fr;
+      gap: 48px;
       align-items: center;
     }
-    .hero h1 { margin-bottom: 12px; }
-    .hero-text {
-      color: var(--text-muted);
-      margin-bottom: 20px;
-      font-size: 1.02rem;
+    .hero h1 {
+      font-size: clamp(2rem, 4vw, 2.8rem);
+      line-height: 1.2;
+      margin-bottom: 16px;
+      color: var(--text);
+    }
+    .hero-sub {
+      font-size: 1.05rem;
+      color: var(--text-light);
+      margin-bottom: 28px;
     }
     .hero-cta {
       display: inline-block;
-      background: var(--primary);
+      background: var(--teal);
       color: #fff;
-      padding: 12px 24px;
-      border-radius: 5px;
+      padding: 14px 32px;
+      border-radius: 50px;
+      font-family: 'Quicksand', sans-serif;
       font-weight: 600;
-      font-size: 0.95rem;
+      font-size: 1rem;
+      transition: transform 0.2s, box-shadow 0.2s;
     }
-    .hero-cta:hover { background: var(--primary-dark); }
-    .hero-img {
-      border-radius: 6px;
-      aspect-ratio: 4/3;
-      object-fit: cover;
+    .hero-cta:hover { 
+      transform: translateY(-2px); 
+      box-shadow: 0 8px 24px rgba(8,145,178,0.3);
     }
-    .hero-meta {
-      margin-top: 16px;
+    .hero-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      margin-top: 20px;
+      padding: 8px 16px;
+      background: #fff;
+      border-radius: 50px;
       font-size: 0.9rem;
-      color: var(--text-muted);
+      color: var(--text-light);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.06);
+    }
+    .hero-badge span { color: var(--teal); font-weight: 600; }
+    .hero-img {
+      border-radius: 16px;
+      box-shadow: 0 20px 40px rgba(0,0,0,0.1);
     }
 
-    /* Services */
-    .services { padding: 48px 0; }
+    /* Services - checklist style */
+    .services {
+      padding: 80px 0;
+    }
+    .services-inner {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 0 24px;
+    }
+    .services h2 {
+      font-size: 1.8rem;
+      margin-bottom: 40px;
+      color: var(--text);
+    }
     .services-grid {
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 16px;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 20px;
     }
     .service-item {
-      background: #fff;
+      display: flex;
+      align-items: flex-start;
+      gap: 14px;
       padding: 20px;
-      border-radius: 6px;
-      border: 1px solid var(--border);
+      background: #f8fafc;
+      border-radius: 12px;
     }
-    .service-item p { color: var(--text-muted); font-size: 0.9rem; }
+    .service-check {
+      width: 24px;
+      height: 24px;
+      background: var(--teal);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      color: #fff;
+      font-size: 14px;
+    }
+    .service-item h3 {
+      font-size: 1rem;
+      margin-bottom: 4px;
+    }
+    .service-item p {
+      color: var(--text-light);
+      font-size: 0.9rem;
+    }
 
     /* About */
     .about {
-      padding: 48px 0;
-      background: #fff;
-      border-top: 1px solid var(--border);
-      border-bottom: 1px solid var(--border);
+      padding: 80px 0;
+      background: linear-gradient(to bottom, #fff, #f8fafc);
     }
-    .about-inner { max-width: 680px; }
-    .about-text { color: var(--text-muted); margin-bottom: 16px; }
-    .about-list { list-style: none; }
-    .about-list li {
-      padding: 4px 0;
-      padding-left: 20px;
-      position: relative;
-      font-size: 0.95rem;
+    .about-inner {
+      max-width: 700px;
+      margin: 0 auto;
+      padding: 0 24px;
+      text-align: center;
     }
-    .about-list li::before {
-      content: "—";
-      position: absolute;
-      left: 0;
-      color: var(--primary);
+    .about h2 {
+      font-size: 1.8rem;
+      margin-bottom: 20px;
+    }
+    .about p {
+      color: var(--text-light);
+      font-size: 1.02rem;
+      margin-bottom: 16px;
+    }
+    .about-stats {
+      display: flex;
+      justify-content: center;
+      gap: 48px;
+      margin-top: 40px;
+    }
+    .stat {
+      text-align: center;
+    }
+    .stat-num {
+      font-family: 'Quicksand', sans-serif;
+      font-size: 2.5rem;
+      font-weight: 700;
+      color: var(--teal);
+    }
+    .stat-label {
+      font-size: 0.9rem;
+      color: var(--text-light);
     }
 
     /* CTA */
-    .cta-section {
-      padding: 48px 0;
-      background: var(--primary);
-      color: #fff;
+    .cta {
+      padding: 80px 0;
+      background: var(--teal);
       text-align: center;
     }
-    .cta-section h2 { color: #fff; margin-bottom: 12px; }
-    .cta-section p { opacity: 0.9; margin-bottom: 20px; }
-    .cta-btn {
+    .cta h2 {
+      font-size: 2rem;
+      color: #fff;
+      margin-bottom: 16px;
+    }
+    .cta p {
+      color: rgba(255,255,255,0.85);
+      margin-bottom: 32px;
+      font-size: 1.05rem;
+    }
+    .cta-phone {
       display: inline-block;
       background: #fff;
-      color: var(--primary);
-      padding: 14px 28px;
-      border-radius: 5px;
-      font-weight: 600;
+      color: var(--teal);
+      padding: 16px 40px;
+      border-radius: 50px;
+      font-family: 'Quicksand', sans-serif;
+      font-size: 1.2rem;
+      font-weight: 700;
     }
-
-    /* Contact */
-    .contact { padding: 48px 0; }
-    .contact-grid {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      gap: 20px;
-    }
-    .contact-item {
-      background: #fff;
-      padding: 24px;
-      border-radius: 6px;
-      border: 1px solid var(--border);
-      text-align: center;
-    }
-    .contact-label { font-size: 0.85rem; color: var(--text-muted); margin-bottom: 4px; }
-    .contact-value { font-size: 1.1rem; font-weight: 600; }
-    .contact-value a { color: var(--primary); }
+    .cta-phone:hover { box-shadow: 0 8px 24px rgba(0,0,0,0.2); }
 
     /* Footer */
     .footer {
-      padding: 24px 0;
+      padding: 32px 0;
       text-align: center;
-      font-size: 0.85rem;
-      color: var(--text-muted);
+      font-size: 0.9rem;
+      color: var(--text-light);
     }
 
     @media (max-width: 768px) {
-      .hero-inner { grid-template-columns: 1fr; }
-      .hero-img { order: -1; }
+      .hero-inner { grid-template-columns: 1fr; text-align: center; }
+      .hero-img { order: -1; max-width: 400px; margin: 0 auto; }
       .services-grid { grid-template-columns: 1fr; }
-      .contact-grid { grid-template-columns: 1fr; }
+      .about-stats { flex-direction: column; gap: 24px; }
     }
   </style>
 </head>
 <body>
   <nav class="nav">
-    <div class="container nav-inner">
+    <div class="nav-inner">
       <span class="logo">Gloria's Cleaning</span>
-      <a href="tel:7377037203" class="nav-cta">Call (737) 703-7203</a>
+      <a href="tel:7377037203" class="nav-cta">Call Gloria</a>
     </div>
   </nav>
 
   <section class="hero">
-    <div class="container hero-inner">
+    <div class="hero-inner">
       <div>
-        <h1>Austin's Trusted House Cleaner</h1>
-        <p class="hero-text">I'm Gloria. I've been cleaning homes in Austin for over 10 years. Apartments, houses, move-in/move-out—I do it all. Reliable, detail-oriented, and I treat your home like my own.</p>
-        <a href="tel:7377037203" class="hero-cta">Call or Text Gloria</a>
-        <div class="hero-meta">10+ years experience in Austin</div>
+        <h1>Austin Homes, Sparkling Clean</h1>
+        <p class="hero-sub">Hi, I'm Gloria. I've been cleaning homes in Austin for over 10 years. Detailed, reliable, and always on time. Your home will shine.</p>
+        <a href="tel:7377037203" class="hero-cta">Get a Free Quote</a>
+        <div class="hero-badge">
+          <span>10+</span> years of experience
+        </div>
       </div>
-      <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?w=700&h=525&fit=crop&q=80" alt="Professional house cleaning" class="hero-img">
+      <img src="https://images.unsplash.com/photo-1581578731548-c64695cc6952?w=600&h=450&fit=crop&q=80" alt="Clean home interior" class="hero-img">
     </div>
   </section>
 
   <section class="services">
-    <div class="container">
-      <h2>Services I Offer</h2>
+    <div class="services-inner">
+      <h2>What I Clean</h2>
       <div class="services-grid">
         <div class="service-item">
-          <h3>Regular Cleaning</h3>
-          <p>Weekly or bi-weekly maintenance cleaning to keep your home fresh and tidy.</p>
+          <div class="service-check">✓</div>
+          <div>
+            <h3>Regular House Cleaning</h3>
+            <p>Weekly, bi-weekly, or monthly visits to keep your home fresh</p>
+          </div>
         </div>
         <div class="service-item">
-          <h3>Deep Cleaning</h3>
-          <p>Top-to-bottom thorough cleaning. Perfect when you need a fresh start.</p>
+          <div class="service-check">✓</div>
+          <div>
+            <h3>Deep Cleaning</h3>
+            <p>Top-to-bottom scrub for those times you need extra attention</p>
+          </div>
         </div>
         <div class="service-item">
-          <h3>Move-In / Move-Out</h3>
-          <p>Get your deposit back or start fresh in your new place. I leave it spotless.</p>
+          <div class="service-check">✓</div>
+          <div>
+            <h3>Move-In / Move-Out</h3>
+            <p>Get your deposit back or start fresh in your new place</p>
+          </div>
         </div>
         <div class="service-item">
-          <h3>Apartment Cleaning</h3>
-          <p>Studios to 3-bedrooms. I work efficiently without cutting corners.</p>
-        </div>
-        <div class="service-item">
-          <h3>House Cleaning</h3>
-          <p>Full homes of any size. Kitchen, bathrooms, bedrooms, living areas—all of it.</p>
-        </div>
-        <div class="service-item">
-          <h3>One-Time Cleaning</h3>
-          <p>Party prep, post-renovation, or just when you need help. No commitment needed.</p>
+          <div class="service-check">✓</div>
+          <div>
+            <h3>Apartment Cleaning</h3>
+            <p>1, 2, or 3 bedroom apartments—I've got you covered</p>
+          </div>
         </div>
       </div>
     </div>
   </section>
 
   <section class="about">
-    <div class="container about-inner">
-      <h2>About Me</h2>
-      <p class="about-text">I started cleaning homes over 10 years ago and never looked back. I love what I do, and it shows in my work. When you hire me, you're not getting a faceless company—you're getting me, Gloria, someone who genuinely cares about leaving your home better than I found it.</p>
-      <p class="about-text">I bring my own supplies and equipment. I show up on time. And I pay attention to the details that matter.</p>
-      <ul class="about-list">
-        <li>10+ years cleaning homes in Austin</li>
-        <li>I bring my own supplies</li>
-        <li>Reliable and punctual</li>
-        <li>Detail-oriented</li>
-        <li>Flexible scheduling</li>
-      </ul>
-    </div>
-  </section>
-
-  <section class="cta-section">
-    <div class="container">
-      <h2>Ready for a Cleaner Home?</h2>
-      <p>Text or call me for a quote. I respond quickly.</p>
-      <a href="tel:7377037203" class="cta-btn">(737) 703-7203</a>
-    </div>
-  </section>
-
-  <section class="contact">
-    <div class="container">
-      <h2>Get in Touch</h2>
-      <div class="contact-grid">
-        <div class="contact-item">
-          <div class="contact-label">Phone / Text</div>
-          <div class="contact-value"><a href="tel:7377037203">(737) 703-7203</a></div>
+    <div class="about-inner">
+      <h2>About Gloria</h2>
+      <p>I started cleaning houses over 10 years ago, and I've loved every minute of it. There's something satisfying about walking into a cluttered space and leaving it spotless.</p>
+      <p>I'm detail-oriented and reliable. When I say I'll be there, I'm there. No excuses, no surprises. Just a clean home waiting for you when you get back.</p>
+      <div class="about-stats">
+        <div class="stat">
+          <div class="stat-num">10+</div>
+          <div class="stat-label">Years Experience</div>
         </div>
-        <div class="contact-item">
-          <div class="contact-label">Service Area</div>
-          <div class="contact-value">Austin & Surrounding</div>
-        </div>
-        <div class="contact-item">
-          <div class="contact-label">Availability</div>
-          <div class="contact-value">Mon–Sat, Flexible</div>
+        <div class="stat">
+          <div class="stat-num">Austin</div>
+          <div class="stat-label">Based & Serving</div>
         </div>
       </div>
     </div>
   </section>
 
+  <section class="cta">
+    <h2>Ready for a Clean Home?</h2>
+    <p>Text or call for a free quote. I'll get back to you the same day.</p>
+    <a href="tel:7377037203" class="cta-phone">(737) 703-7203</a>
+  </section>
+
   <footer class="footer">
-    <div class="container">
-      <p>© 2026 Gloria's Cleaning Service. Austin, TX.</p>
-    </div>
+    <p>© 2026 Gloria's Cleaning Service. Austin, TX and surrounding areas.</p>
   </footer>
 </body>
 </html>
